# Enterprise-Grade-RAG-with-PGVector---Hybrid-Search

./: .env.example  .gitignore  Dockerfile  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  pyproject.toml
app/: dependencies.py  main.py
app/api/: routers.py
app/core/: config.py  logging_config.py
app/models/: schemas.py
app/services/: chunking.py  embedding.py  evaluation.py  hybrid_retriever.py  ingestion.py  orchestration.py  pgvector_store.py  table_extractor.py
app/utils/: rrf.py
enterprise_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: init_db.py
tests/: test_smoke.py
