[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise_rag"
version = "0.1.0"
description = "Enterprise-grade RAG stack with pgvector-backed hybrid retrieval, hierarchical ingestion, and evaluation."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Harsh"}]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "langchain>=0.2.10",
    "langchain-community>=0.2.9",
    "langchain-core>=0.2.10",
    "langchain-openai>=0.1.7",
    "sentence-transformers>=3.0.1",
    "rank-bm25>=0.2.2",
    "ragas>=0.1.9",
    "datasets>=2.19.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.29",
    "psycopg[binary,pool]>=3.1.18",
    "pgvector>=0.1.9",
    "python-dotenv>=1.0.1",
    "docling>=1.16.4",
    "python-multipart>=0.0.9",
    "orjson>=3.10.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.4.8",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
